enable disable rule

--- a/modules/ingress/nginx_k8s_native/0.2/facets.yaml
+++ b/modules/ingress/nginx_k8s_native/0.2/facets.yaml
@@ -105,9 +105,9 @@ spec:
           description: Name of the ingress object
           type: object
           properties:
-            enable:
+            disable:
               type: boolean
-              title: Enable Rule
+              title: Disable Rule
               description: Enable/Diaable Rule
             domain_prefix:
               type: string
