--- a/modules/network/aws_vpc/0.1/facets.yaml
+++ b/modules/network/aws_vpc/0.1/facets.yaml
@@ -4,6 +4,9 @@ version: "0.1"
 description: Adds network - aws vpc flavor
 clouds:
   - aws
+outputs:
+  - name: default
+    type: "@output/aws_vpc"
 spec:
   title: network
   description: Specification of the network for aws vpc flavor
