--- a/modules/network/azure_vpc/0.1/facets.yaml
+++ b/modules/network/azure_vpc/0.1/facets.yaml
@@ -5,6 +5,9 @@ version: "0.1"
 description: Adds network - azure vpc flavor
 clouds:
   - azure
+outputs:
+  - name: default
+    type: "@output/azure_vpc"
 spec:
   title: network
   description: Specification of the network for azure vpc flavor
