--- a/modules/network/gcp_vpc/0.1/facets.yaml
+++ b/modules/network/gcp_vpc/0.1/facets.yaml
@@ -3,10 +3,10 @@ flavor: gcp_vpc
 version: "0.1"
 description: Adds network - gcp vpc flavor
 clouds:
-- gcp
+  - gcp
 outputs:
-  default:
-    type: "@outputs/gcp_vpc"
+  - name: default
+    type: "@output/gcp_vpc"
 spec:
   title: network
   description: Specification of the network for gcp vpc flavor
