--- a/modules/network/azure_vpc/0.1/facets.yaml
+++ b/modules/network/azure_vpc/0.1/facets.yaml
@@ -4,10 +4,10 @@ alias-flavors: ["default"]
 version: "0.1"
 description: Adds network - azure vpc flavor
 clouds:
-- azure
+  - azure
 outputs:
-  default:
-    type: "@outputs/azure_vpc"
+  - name: default
+    type: "@output/azure_vpc"
 spec:
   title: network
   description: Specification of the network for azure vpc flavor
